--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "esri-leaflet-geocoder": "^3.1.4",
     "leaflet": "^1.9.4",
     "leaflet-control-geocoder": "^2.4.0",
     "mongodb": "^6.3.0",
@@ -18,6 +19,7 @@
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.5.3",
     "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
